--- a/src/styles/MissionLinks.css
+++ b/src/styles/MissionLinks.css
@@ -1,13 +1,12 @@
 .missionLinks{
   width: 100vw;
   background: url(../assets/rocket.png) no-repeat center center fixed;
+  background-size: cover;
   height: 1000px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding-bottom: 150px;
-
 }
 
 .missionLinks__text{
@@ -22,6 +21,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .missionLinks__buttonRow__button{
