--- a/src/styles/Container3.css
+++ b/src/styles/Container3.css
@@ -1,4 +1,4 @@
-.container__container2__container3{
+.container3{
   border-left: 2px dotted var(--coolGrey);
   padding-left: 25px;
   padding-right: 40px;
@@ -9,7 +9,7 @@
 
 }
 
-.container__container2__container3__row{
+.container3__row{
   padding-bottom: 10px;
   width: 20vw;
   margin: 0;
@@ -17,7 +17,7 @@
   flex-direction: row;
 }
 
-.container__container2__container3__row__span{
+.container3__row__span{
   display: block;
   color: #a7a9ac;
   margin-right: 6px;
