--- a/src/styles/ContainerRight.css
+++ b/src/styles/ContainerRight.css
@@ -5,7 +5,7 @@
   width: 100%;
 }
 
-.container__container2{
+.container2{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
