--- a/src/styles/list/Message.css
+++ b/src/styles/list/Message.css
@@ -1,10 +1,9 @@
-.list__container{
+.list__message{
   background-color: var(--darkGrey);
-  width: 100vw;
-  min-height: calc(100vh - 630px);
-  margin: 0;
-  padding: 20px 0 0 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 650px);
+  color: var(--coolGrey);
 }
