--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer{
   height: 150px;
-  width: 100vw;
+  width: 100%;
   background-color: var(--darkGrey);
   color: var(--coolGrey);
   display: flex;
