styling list fixed

--- a/src/styles/list/LaunchesList.css
+++ b/src/styles/list/LaunchesList.css
@@ -7,7 +7,7 @@
 }
 
 .list__loading{
-  background-color: var(--darkGrey);
+  background-color: var(--almostBlack);
   display: flex;
   flex-direction: row;
   justify-content: center;
