--- a/src/styles/list/ListContainer.css
+++ b/src/styles/list/ListContainer.css
@@ -1,10 +1,12 @@
 .list__container{
-  background-color: var(--darkGrey);
+  background-color: var(--almostBlack);
+  overflow: hidden;
   width: 100%;
   min-height: calc(100vh - 630px);
   margin: 0;
-  padding: 20px 0 0 0;
+  padding: 90px 0 0 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  position:relative
 }
