--- a/src/styles/list/ListFilters.css
+++ b/src/styles/list/ListFilters.css
@@ -3,5 +3,28 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 25px;
+  margin-top: 45px;
+}
+
+.buttonRound{
+  border-radius: 25px;
+  width: auto;
+  height: 35px;
+  margin: 50px 10px;
+  background-color: transparent;
+  border: 1px solid var(--coolGrey);
+  color: var(--coolGrey);
+  font-size: 15px;
+  padding: 0 25px;
+  letter-spacing: 0px;
+  font-weight: 400;
+}
+
+.buttonRound:focus {outline:0;}
+
+.buttonRound:hover {
+  border: 1px solid var(--white);
+  box-shadow:inset 0 0 15px var(--white);
+  color: var(--white);
+  cursor: pointer;
 }
