--- a/src/styles/list/ListHeader.css
+++ b/src/styles/list/ListHeader.css
@@ -6,11 +6,13 @@
   width: 100%;
   background-image: url(../../assets/moon.png); /*no-repeat center center fixed;*/
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position-y: 23%;
+  background-position-x: 50%;
   background-attachment: fixed;
-  background-size:60%;
-  background-color: var(--darkGrey);
+  background-size:50%;
+  background-color: var(--almostBlack);
   height: 500px;
+  padding-top: 90px;
 }
 
 .list__header__img{
@@ -22,27 +24,7 @@
 .list__header__text{
   font-size: 19px;
   letter-spacing: 20px;
-  font-weight: 600;
+  font-weight: 400;
   color: var(--coolGrey);
-  margin-top: 10px;
-}
-
-.buttonRound{
-  border-radius: 25px;
-  width: 150px;
-  height: 35px;
-  margin: 50px 15px;
-  background-color: transparent;
-  border: 1px solid var(--coolGrey);
-  color: var(--coolGrey);
-  font-size: 12px;
-}
-
-.buttonRound:focus {outline:0;}
-
-.buttonRound:hover {
-  border: 1px solid var(--white);
-  box-shadow:inset 0 0 15px var(--white);
-  color: var(--white);
-  cursor: pointer;
+  margin-top: 23px;
 }
