--- a/src/styles/list/Message.css
+++ b/src/styles/list/Message.css
@@ -1,5 +1,5 @@
 .list__message{
-  background-color: var(--darkGrey);
+  background-color: var(--almostBlack);
   display: flex;
   flex-direction: row;
   justify-content: center;
