styling list fixed

--- a/src/styles/list/ListBrick.css
+++ b/src/styles/list/ListBrick.css
@@ -79,6 +79,7 @@
   max-height: 20px;
   overflow: hidden; /*dlatego content sie chowa*/
   margin-bottom: 10px;
+  text-transform: uppercase;
 }
 
 .listBrick__date--left{
