--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,7 +7,6 @@
   flex-direction: row;
   align-items: center;
   margin: 0;
-  /*position: relative;*/
 }
 
 .footerLeft{
@@ -22,7 +21,8 @@
   margin-left: 80px;
   font-weight: 600;
   font-size: 18px;
-  color: var(--brownishGrey)
+  color: var(--brownishGrey);
+
 }
 
 .footerLeft__line{
@@ -39,6 +39,7 @@
   font-weight: 400;
   font-size: 18px;
   padding: 0 12px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .buttonSocial:hover{
