--- a/src/styles/details/ContainerLeft.css
+++ b/src/styles/details/ContainerLeft.css
@@ -8,20 +8,22 @@
 
 .containerLeft__date{
   color: var(--coolGrey);
-  letter-spacing: 4px;
+  letter-spacing: 9px;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .containerLeft__title{
-  font-size: 42px;
+  font-size: 36px;
+  letter-spacing: 1.5px;
   font-weight: 600;
   margin-top: 15px;
 }
 
 .containerLeft__timer{
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .containerLeft__img{
