--- a/src/styles/details/Header.css
+++ b/src/styles/details/Header.css
@@ -4,6 +4,8 @@
   background-color: var(--almostBlack);
   height: 100px;
   position: relative;
+  position: fixed;
+  width: 100%;
 }
 
 .header__img{
@@ -21,9 +23,11 @@
   display: flex;
   flex-direction: row;
   font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
-  letter-spacing: 5px;
   font-weight: 600;
+  letter-spacing: 9px;
+  font-weight: 600;
+  font-size: 14px;
+  white-space: nowrap;
 }
 
 .backButton:hover{
@@ -41,17 +45,17 @@
 }
 
 .backButton__rectangle {
-  height: 1px;
-  width: 22px;
+  height: 2px;
+  width: 28px;
   background-color: var(--desert);
   position: absolute;
-  top: 9px;
+  top: 8px;
   left: 13px;
 }
 
 .backButton__text{
-  margin-left: 35px;
+  margin-left: 45px;
   position: absolute;
   top: -1px;
-  width: 120px;
+  width: 150px;
 }
