--- a/src/styles/list/ListFilters.css
+++ b/src/styles/list/ListFilters.css
@@ -1,25 +1,29 @@
-.list__header__filters{
+.filters{
   height: 80px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 85px;
+  margin-top: 65px;
 }
 
 .buttonRound{
   border-radius: 25px;
   width: auto;
-  height: 43px;
+  height: 35px;
   margin: 50px 12px;
   background-color: transparent;
-  border: 1px solid var(--coolGrey);
-  color: var(--coolGrey);
-  font-size: 19px;
-  padding: 0 36px;
-  letter-spacing: 0px;
+
+  font-size: 14px;
+  padding: 0 31px;
+  letter-spacing: 1px;
   font-weight: 400;
   white-space: nowrap;
   font-family: 'Open Sans', sans-serif;
+}
+
+.buttonRound--filters{
+  border: 1px solid var(--coolGrey);
+  color: var(--coolGrey);
 }
 
 .buttonRound:focus {outline:0;}
