--- a/src/styles/details/ContainerRight.css
+++ b/src/styles/details/ContainerRight.css
@@ -12,3 +12,14 @@
   margin-bottom: 15px;
   width: 100%;
 }
+
+.containerRight__detailsLoading{
+  background-color: var(--white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  margin-top: 100px;
+}
